Changed the form reset functionality using .trigger("reset")

--- a/review_rating_updated/index.html
+++ b/review_rating_updated/index.html
@@ -50,8 +50,7 @@
                 row.append(cell1, cell2);
                 table.append(row);
                 
-                $('input[name="rating"]:checked').prop('checked', false);
-                $('#comment').val('');
+                $('#review-form').trigger("reset");
             });
         });
     </script>
