--- a/review_rating_updated/index.html
+++ b/review_rating_updated/index.html
@@ -50,7 +50,7 @@
                 row.append(cell1, cell2);
                 table.append(row);
                 
-                $('#review-form').trigger("reset");
+                $(this).trigger("reset");
             });
         });
     </script>
