--- a/review_rating_updated/index.html
+++ b/review_rating_updated/index.html
@@ -49,8 +49,21 @@
                 
                 row.append(cell1, cell2);
                 table.append(row);
+
+                var reviews = JSON.parse(localStorage.getItem('reviews')) || [];
+                reviews.push({ rating, comment });
+                localStorage.setItem('reviews', JSON.stringify(reviews));
                 
                 $(this).trigger("reset");
+
+                reviews = JSON.parse(localStorage.getItem('reviews')) || [];
+                table = $('#table');
+                reviews.forEach(review => {
+                row = $('<tr></tr>');
+                cell1 = $('<td></td>').text(review.rating);
+                cell2 = $('<td></td>').text(review.comment);
+                row.append(cell1, cell2);
+                table.append(row);
             });
         });
     </script>
