--- a/shopping_app/details.html
+++ b/shopping_app/details.html
@@ -11,9 +11,7 @@
     <header>
       <h1>Product Detail</h1>
       <div id="cartContainer">
-        <a id="cartButton" href="cart.html"
-          >Cart: <span data-bind="text: cartCount"></span> items</a
-        >
+        <a id="cartButton" href="cart.html">Cart: <span data-bind="text: cartCount"></span> items</a>
       </div>
       <a href="index.html">Back to Products</a>
     </header>
